usertest/nginx/webserver_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: loic
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: loic.k8s.crossknowledge.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
